--- a/gallery/css/styles.css
+++ b/gallery/css/styles.css
@@ -3,6 +3,18 @@
   font-family: 'ENGCAPS';
   src: url('../fonts/ENGCAPS.TTF') format('truetype');
 }
+.ropa-sans-regular {
+  font-family: "Ropa Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+}
+
+.ropa-sans-regular-italic {
+  font-family: "Ropa Sans", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+}
+
 
 /* Apply styles to the entire page */
 body {
@@ -91,7 +103,7 @@ body {
 
 /* Apply ENGCAPS font to <h3> elements inside .info */
 .gallery .photo .info h3 {
-  font-family: 'ENGCAPS',Engschrift Caps;
+  font-family:'Ropa Sans', sans-serif;
   text-transform: uppercase; /* Capitalize the text */
-  font-size: 30px; /* Increase font size */
+  font-size: 20px; /* Increase font size */
 }
