--- a/gallery/css/styles.css
+++ b/gallery/css/styles.css
@@ -16,7 +16,7 @@ body {
   justify-content: center;
   align-items: center;
   height: 100vh;
-  margin: 0;
+  margin: 01px;
   background-color: #000; /* Set background to black */
   font-family: 'ENGCAPS', Tw Cen MT; 
 }
@@ -25,7 +25,7 @@ body {
 .gallery {
   display: flex;
   flex-wrap: wrap; /* Allow photos to wrap to the next line */
-  gap: 0; /* No gap between photos */
+  gap: 01px; 
 }
 
 /* Individual photo */
